Actually fix unreadable crash message

--- a/addons/dark-www/dark-www.css
+++ b/addons/dark-www/dark-www.css
@@ -652,8 +652,3 @@ img.tips-icon {
 .tips-divider {
   border-top-color: #000;
 }
-
-.crash-container {
-  border: 1px solid #000;
-  background-color: #2d2d2d;
-}
